# KFOREX

./: exchange_rates.xlsx  kfx.py  pyproject.toml  rates.json
app/models/: mcdb.json
app/routes/: route.py
app/services/: excel.py  scrapy.py
docs/: exchange_rates.xlsx  mcb_rates.xlsx
