[tool.poetry]
name = "kfx"
version = "0.1.0"
description = "Kalki Forex Xchange Endpoint"
authors = ["AVPuttur <avputtur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.34.0"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
